enhance file attachment and display

--- a/appsai/socialai/templates/socialai/base.html
+++ b/appsai/socialai/templates/socialai/base.html
@@ -1,6 +1,6 @@
 <!-- File Path: appsai/socialai/templates/socialai/base.html -->
 
-<!-- File Path: appsai/socialai/templates/socialai/base.html -->
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -18,8 +18,9 @@
         {% block content %}
         {% endblock %}
     </div>
-    <script src="{% static 'js/scripts.js' %}"></script>
+    <script src="{% static 'js/scripts.js' %}"></script> <!-- Ensure this line is outside any blocks -->
     {% block extra_scripts %}
     {% endblock %}
 </body>
 </html>
+
