--- a/appsai/socialai/templates/socialai/base.html
+++ b/appsai/socialai/templates/socialai/base.html
@@ -1,7 +1,6 @@
 <!-- File Path: appsai/socialai/templates/socialai/base.html -->
 
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,13 +13,97 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
-    <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">My AI App</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'home' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="youtubeDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            YouTube
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="youtubeDropdown">
+                            <li><a class="dropdown-item" href="{% url 'youtube_title_generator' %}">YouTube Title Generator</a></li>
+                            <li><a class="dropdown-item" href="{% url 'youtube_tags_generator' %}">YouTube SEO Tags Generator</a></li>
+                            <li><a class="dropdown-item" href="{% url 'youtube_description_generator' %}">YouTube SEO Description Generator</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="tiktokDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            TickTock
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="tiktokDropdown">
+                            <li><a class="dropdown-item" href="{% url 'tiktok_title_generator' %}">TickTock Title Generator</a></li>
+                            <li><a class="dropdown-item" href="{% url 'tiktok_tags_generator' %}">TickTock SEO Tags Generator</a></li>
+                            <li><a class="dropdown-item" href="{% url 'tiktok_description_generator' %}">TickTock SEO Description Generator</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="facebookDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Facebook
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="facebookDropdown">
+                            <li><a class="dropdown-item" href="{% url 'facebook_title_generator' %}">Facebook Title Generator</a></li>
+                            <li><a class="dropdown-item" href="{% url 'facebook_tags_generator' %}">Facebook SEO Tags Generator</a></li>
+                            <li><a class="dropdown-item" href="{% url 'facebook_description_generator' %}">Facebook SEO Description Generator</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="instagramDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Instagram
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="instagramDropdown">
+                            <li><a class="dropdown-item" href="{% url 'instagram_title_generator' %}">Instagram Title Generator</a></li>
+                            <li><a class="dropdown-item" href="{% url 'instagram_tags_generator' %}">Instagram SEO Tags Generator</a></li>
+                            <li><a class="dropdown-item" href="{% url 'instagram_description_generator' %}">Instagram SEO Description Generator</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="contentWriterDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Content Writer
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="contentWriterDropdown">
+                            <li><a class="dropdown-item" href="{% url 'blog_title_generator' %}">Blog Title Generator</a></li>
+                            <li><a class="dropdown-item" href="{% url 'blog_introduction_generator' %}">Blog Introduction</a></li>
+                            <li><a class="dropdown-item" href="{% url 'blog_conclusion_generator' %}">Blog Conclusion</a></li>
+                            <li><a class="dropdown-item" href="{% url 'blog_body_generator' %}">Blog Description / Body</a></li>
+                            <li><a class="dropdown-item" href="{% url 'blog_tags_generator' %}">Blog SEO Tags Generator</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="vlogDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Vlog
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="vlogDropdown">
+                            <li><a class="dropdown-item" href="{% url 'vlog_title_generator' %}">Vlog Title Generator</a></li>
+                            <li><a class="dropdown-item" href="{% url 'vlog_tags_generator' %}">Vlog SEO Tags Generator</a></li>
+                            <li><a class="dropdown-item" href="{% url 'vlog_description_generator' %}">Vlog SEO Description Generator</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container mt-4">
         {% block content %}
         {% endblock %}
     </div>
-    <script src="{% static 'js/scripts.js' %}"></script> <!-- Ensure this line is outside any blocks -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJxY0Cmf5SdHf5a4w5GgFTM2Hg5L5tFOQ6I5Q5p3Kjti1BeyZ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
     {% block extra_scripts %}
     {% endblock %}
 </body>
 </html>
+
 
