--- a/appsai/staticfiles/css/styles.css
+++ b/appsai/staticfiles/css/styles.css
@@ -1,20 +1,34 @@
 /* File Path: appsai/static/css/styles.css */
 
 body {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    margin: 0;
     padding-top: 56px;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow: hidden;
+    /* padding-bottom: 70px; Ensure space for the fixed input group */
+}
 
 /* Style for the chat box */
-.chat-box {
-    height: calc(100vh - 150px);
-    overflow-y: scroll;
+/* .chat-box {
+    flex-grow: 1;
+    overflow-y: auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
-    margin-bottom: 20px;
     background-color: #f9f9f9;
-}
+    display: flex;
+    flex-direction: column-reverse;
+    height: calc(100vh - 550px); /* Adjust the height as needed */
+    margin-bottom: 70px; /* Ensure space for the input group */
+} */
 
 
 .chat-message {
@@ -23,10 +37,20 @@ body {
 .chat-message strong {
     display: block;
 }
+
 .input-group {
     display: flex;
     align-items: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #f9f9f9;
+    padding: 10px;
+    border-top: 1px solid #ccc;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
+
 .input-group textarea {
     resize: none;
     overflow: hidden;
@@ -35,32 +59,34 @@ body {
     padding: 15px;
     border: 1px solid #ccc;
 }
+
 .input-group .input-group-append {
     display: flex;
     align-items: center;
 }
+
 .input-group .input-group-append .btn {
     border: none;
     background: transparent;
     padding: 0 15px;
 }
+
 .input-group .input-group-append .btn i {
     font-size: 24px;
     cursor: pointer;
-
 }
 
-#file-attachments { /* Ensure this block is present */
+#file-attachments {
     font-size: 14px;
     color: #666;
     margin-bottom: 10px;
 }
-.file-attachment { /* Ensure this block is present */
+.file-attachment {
     display: flex;
     align-items: center;
     margin-bottom: 5px;
 }
-.file-attachment i { /* Ensure this block is present */
+.file-attachment i {
     margin-right: 5px;
 }
 
@@ -82,9 +108,6 @@ body {
 .file-icon.csv {
     color: #f39c12;
 }
-
-  
-
 
 /* Custom styles for navbar */
 .navbar-light .navbar-brand {
@@ -111,5 +134,3 @@ body {
 .navbar-nav .nav-item .nav-link {
     color: #28a745; /* Success color for links */
 }
-
-
